Fixed white space below image Temporary style update

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -11,5 +11,6 @@ div.meta table { width: 100%; }
 
 div.imagelist { overflow: auto; min-width: 150px; }
 
-div.image { border: 1px solid #e7e7e7; float: left; padding: 10px; margin: 10px; background-color: #f0f0f0; width: 100px; font-size: 0.75em; }
-div.image a { background-color: #fff; display: block; text-align: center; border: 1px solid #e7e7e7; min-height: 60px; }
+div.image { border: 1px solid #e7e7e7; float: left; padding: 10px; margin: 10px; background-color: #f0f0f0; font-size: 0.65em; }
+div.image a { background-color: #fff; display: block; border: 1px solid #e7e7e7; }
+div.image img { vertical-align: bottom; }
